feat: add roster, lineup, and practice planning workflow
- Added Players page with form + JSON storage for roster, stats, and struggles
- Implemented lineup heuristic (stats-driven, role-specific weights)
- Added Lineup page: shows heuristic lineup; GPT notes generated only on button click
- Added Practice page with schedule form (days, times, duration, location)
  - Persist practice settings in JSON
  - Generate practice plan with GPT only when button clicked
- Updated navigation and home page with workflow instructions
- Improved system prompt engineering for precise, coach-style outputs
- Enhanced CSS styling and layout across all pages

--- a/.gitignore
+++ b/.gitignore
@@ -12,13 +12,17 @@ venv/
 ENV/
 env/
 .Python
-    
+
 # --- Environment / secrets ---
 .env
 
-# --- Flask uploads (ignore video files) ---
+# --- Flask uploads (ignore actual videos) ---
 app/static/uploads/*
 !app/static/uploads/.gitkeep
+
+# --- Player/practice data (JSON) ---
+app/data/*.json
+!app/data/.gitkeep
 
 # --- IDE / Editor ---
 .vscode/
